# grantflow

./: .codespellrc  .cursorrules  .dockerignore  .env.example  .funcignore  .gitignore  .npmrc  .pre-commit-config.yaml  .prettierrc  .tflint.hcl  .trivyignore  .windsurfrules  AGENTS.md  AI_EVALUATION_BENCHMARK_REPORT.md  API_ALIGNMENT_PLAN.md  API_IMPLEMENTATION_GUIDE.md  BACKEND_API_REFACTOR.md  BACKEND_UPDATE_TASKS.md  BASELINE_vs_NLP_BENCHMARK_RESULTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DASHBOARD_IMPLEMENTATION.md  Dockerfile  E2E_TESTING.md  ERROR_RESOLUTION_PLAN.md  IMPLEMENTATION_PLAN.md  LICENSE  MONITORING_OBSERVABILITY_PLAN.md  ORGANIZATION_IMPLEMENTATION_PLAN.md  RAG_BENCHMARK_GUIDE.md  RAG_OPTIMIZATION_PLAN.md  RAG_OPTIMIZATION_PROGRESS_REPORT.md  README.md  SECURITY.md  TODO.md  WIZARD_FEATURE.md  ai-rulez.yaml  atlas.hcl  biome.json  (+35 more)
backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .windsurfrules  CLAUDE.md  Dockerfile  README.md  alembic.ini  atlas.hcl  pg-extensions.sql  pyproject.toml
backend/.github/workflows/: ci.yaml  deployment.yaml
backend/alembic/: env.py
backend/scripts/: funding_organizations.json  seed_db.py
backend/src/: common_types.py  constants.py  dto.py  exceptions.py  files.py
backend/src/api/: api_types.py  main.py  middleware.py
backend/src/db/: connection.py  enums.py  json_objects.py  tables.py
backend/src/indexer/: chunking.py  files.py  indexing.py
backend/src/rag/: completion.py  dto.py  llm_evaluation.py  long_form.py  post_processing.py  retrieval.py  search_queries.py  source_validation.py
backend/src/utils/: ai.py  db.py  embeddings.py  extraction.py  firebase.py  jwt.py  logger.py  nlp.py  prompt_template.py  retry.py  sync.py  text.py
backend/tests/: conftest.py  factories.py  test_utils.py
backend/tests/api/: middleware_test.py
backend/tests/indexer/: conftest.py
backend/tests/rag/: retrieval_test.py
backend/tests/utils/: extraction_test.py  serialization_test.py
cloud_functions/: README.md  ai-rulez.yaml  app_hosting_alert_function.py  budget_function.py  main.py  pyproject.toml  requirements.txt
cloud_functions/src/: __init__.py  app_hosting_alert_function.py  budget_function.py
cloud_functions/src/app_hosting_alerts/: __init__.py  main.py
cloud_functions/src/auth_blocking/: main.py
cloud_functions/src/budget_alerts/: __init__.py  main.py
cloud_functions/src/email_notifications/: __init__.py  main.py  main_fixed.py
cloud_functions/src/grant_matcher/: __init__.py  main.py
cloud_functions/src/user_cleanup/: __init__.py  main.py
cloud_functions/tests/: __init__.py  app_hosting_alert_function_test.py  budget_function_test.py  conftest.py
cloud_functions/tests/app_hosting_alerts/: __init__.py  main_test.py
cloud_functions/tests/auth_blocking/: main_test.py
cloud_functions/tests/budget_alerts/: __init__.py  main_test.py
cloud_functions/tests/email_notifications/: __init__.py  grant_alerts_test.py  main_test.py  test_grant_alerts.py
cloud_functions/tests/grant_matcher/: __init__.py  main_test.py
cloud_functions/tests/user_cleanup/: __init__.py  main_test.py
cloud_functions/user_cleanup/: main.py  pyproject.toml
functions/: README.md  main.py  pyproject.toml  requirements.txt
functions/dlq_manager/: .gcloudignore  ERROR_CLASSIFICATION.md  README.md  main.py
functions/dlq_manager/tests/: __init__.py  conftest.py  main_test.py
functions/gcs-file-notifier/: pyproject.toml
functions/gcs-file-notifier/src/: main.py
functions/gcs_notifier/: README.md  pyproject.toml
functions/gcs_notifier/src/: main.py
functions/gcs_notifier/tests/: README.md  conftest.py  main_test.py
functions/src/auth_blocking/: DEPLOYMENT.md  main.py
functions/src/email_notifications/: main.py
functions/tests/: conftest.py
functions/tests/app_hosting_alerts/: main_test.py
functions/tests/auth_blocking/: main_test.py
functions/tests/budget_alerts/: main_test.py
functions/tests/email_notifications/: grant_alerts_test.py  main_test.py
functions/tests/grant_matcher/: main_test.py
functions/tests/user_cleanup/: main_test.py
services/backend/: .env.example  Dockerfile  README.md  pyproject.toml
services/backend/scripts/: seed_db.py
services/backend/src/: __init__.py  common_types.py  constants.py  dto.py  exceptions.py  main.py
services/backend/tests/: conftest.py  factories.py  test_utils.py
services/crawler/: .env.example  Dockerfile  README.md  pyproject.toml
services/crawler/src/: constants.py  dev_indexing_bypass.py  extraction.py  html_utils.py  main.py  utils.py
services/crawler/tests/: conftest.py  dev_indexing_bypass_test.py  extraction_test.py  main_test.py  test_url_deduplication.py  url_deduplication_test.py  utils_test.py
services/indexer/: .env.example  Dockerfile  README.md  pyproject.toml
services/indexer/src/: chunking.py  dto.py  extraction.py  files.py  gcs.py  indexing.py  main.py  processing.py  pubsub.py
services/indexer/tests/: conftest.py  extraction_test.py  factories.py  indexing_test.py  main_test.py  metadata_persistence_integration_test.py  processing_test.py
services/rag/: .env.example  Dockerfile  METADATA_FILTERING_PLAN.md  README.md  SQLALCHEMY_METADATA_FILTERING_PLAN.md  pyproject.toml  run_e2e_tests.py
services/rag/src/: constants.py  dto.py  enums.py  evaluation_criteria.py  main.py
services/rag/tests/: README.md  cancellation_test.py  conftest.py  main_test.py  pubsub_autofill_test.py  pubsub_validation_test.py  retrieval_optimization_performance_test.py  test_pubsub_validation.py
services/scraper/: Dockerfile  README.md  pyproject.toml  run_local.py
services/scraper/src/: db_utils.py  dtos.py  exceptions.py  firestore_utils.py  gcs_utils.py  grant_enrichment.py  grant_pages.py  html_utils.py  main.py  search_data.py  storage.py  url_utils.py
services/scraper/tests/: conftest.py  db_utils_test.py  discord_notification_test.py  e2e_test.py  firestore_utils_test.py  grant_enrichment_test.py  grant_pages_test.py  html_utils_test.py  search_data_test.py  setup_emulator.py  storage_test.py  (+1 more)
(+5319 files in other folders)
