[project]
name = "grantflow"
version = "0.1.0"
description = "GrantFlow Monorepo"
readme = "README.md"
license = { text = "UNLICENSED" }

requires-python = "==3.13.*"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
]

[dependency-groups]
dev = [
  "ai-rulez>=1.0.0",
  "codespell>=2.4.0",
  "covdefaults>=2.3.0",
  "faker>=37.0.1",
  "lefthook>=1.11.14",
  "mypy>=1.15.0",
  "polyfactory>=2.19.0",
  "pyproject-fmt>=2.6.0",
  "pytest>=8.3.5",
  "pytest-asyncio>=0.25.3",
  "pytest-cov>=6.0.0",
  "pytest-mock>=3.14.0",
  "pytest-timeout>=2.3.1",
  "pytest-xdist>=3.7.0",
  "python-dotenv>=1.0.1",
  "ruff>=0.11.1",
  "uncomment>=2.2.3",
  "uv-bump",
]

[tool.ruff]
target-version = "py313"
line-length = 120
src = [
  "packages/**/src",
  "packages/**/tests",
  "services/**/src",
  "services/**/tests",
]

format.docstring-code-line-length = 120
format.docstring-code-format = true
lint.select = [ "ALL" ]
lint.ignore = [
  "ANN401",   # Dynamically typed ANY
  "ASYNC110", # Use Event instead of sleep in async loop
  "COM812",   # Conflicts with formatter
  "D",        # Doc strings
  "E501",     # Line too long, handled by ruff format
  "EM",       # Exception messages,
  "FBT",      # Boolean-typed positional argument in function definition
  "FIX",      # We allow todo and fixme comments
  "ISC001",   # Conflicts with formatter
  "PD011",    # Creates false positives
  "PGH003",   # Required specific mypy ignores
  "PLR2004",  # Magic variables, we allow them
  "S104",     # Disallows using '0.0.0.0' as a host
  "TD",       # We allow todo and fixme comments
  "TRY",      # Try except block, rules are too strict
]
lint.per-file-ignores."**/tests/**/*.*" = [
  "ARG",
  "D",
  "N815",
  "PLC0415",
  "PT006",
  "PT007",
  "PT012",
  "PT013",
  "RUF012",
  "S",
]
lint.per-file-ignores."e2e/**/*.*" = [
  "ARG001",
  "D",
  "EXE002",
  "N815",
  "PT006",
  "PT007",
  "PT012",
  "PT013",
  "RUF012",
  "S",
]
lint.per-file-ignores."packages/db/alembic/**/*.*" = [ "INP001" ]
lint.per-file-ignores."scripts/**/*.*" = [
  "ARG001",
  "BLE001",
  "D",
  "DTZ003",
  "G004",
  "N999",
  "S",
]
lint.per-file-ignores."testing/**/*.*" = [
  "ARG001",
  "D",
  "N815",
  "PT006",
  "PT007",
  "PT012",
  "PT013",
  "RUF012",
  "S",
]
lint.isort.known-first-party = [ "src", "tests" ]
lint.mccabe.max-complexity = 25
lint.pydocstyle.convention = "google"
lint.pylint.max-args = 12
lint.pylint.max-branches = 25
lint.pylint.max-returns = 10
lint.pylint.max-statements = 100

[tool.codespell]
ignore-words-list = "Bu,COo,bu,TAHt,UE,Mater,CROs,devlop,vEw,afterAll,beforeAll,TE"
skip = "*/e2e/*,**/e2e/**,pnpm-lock.yaml,*.spec.ts,*.spec.tsx,*_test.py,*/tests/*,**/tests/**,*/coverage/*,**/coverage/**"

[tool.pyproject-fmt]
keep_full_version = true
max_supported_python = "3.13"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
timeout = 120
plugins = [ "testing.xdist_config_plugin" ]
markers = [
  "smoke: Quick smoke tests (< 1 min)",
  "quality_assessment: Quality assessment tests (2-5 min)",
  "e2e_full: Complete e2e tests (10+ min)",
  "slow: All slow tests",
  "semantic_evaluation: Semantic similarity evaluation tests",
  "ai_eval: AI-powered evaluation tests",
  "xdist_group(name): Mark tests to run in the same xdist worker",
]
filterwarnings = [
  "ignore::DeprecationWarning:pkg_resources.*",
  "ignore::DeprecationWarning:google.*",
  "ignore::DeprecationWarning:websockets.*",
  "ignore::DeprecationWarning:fake_http_header.*",
  "ignore::DeprecationWarning:importlib.resources.*",
  "ignore::DeprecationWarning:tracerite.*",
]
# Enable pytest-xdist for both local development and CI
addopts = [
  "-n",
  "auto",             # Use all available CPU cores (2 in GitHub Actions, more locally)
  "--dist",
  "worksteal",        # Dynamic test distribution for better load balancing
  "--maxprocesses",
  "4",                # Limit to 4 workers max
  "-x",               # Stop on first failure to get faster feedback
  "--strict-markers", # Ensure all markers are registered
  "--tb=short",       # Shorter traceback format for better readability in CI
]

[tool.coverage.run]
plugins = [ "covdefaults" ]
omit = [ "services/**/tests/*", "packages/**/tests/*" ]
source = [ "services/**/src", "packages/**/src" ]

[tool.coverage.report]
exclude_lines = [ 'if TYPE_CHECKING:' ]
fail_under = 80

[tool.mypy]
python_version = "3.13"
disable_error_code = 'import-untyped'
implicit_reexport = false
show_error_codes = true
strict = true
namespace_packages = true
explicit_package_bases = true
mypy_path = [ "." ]

[tool.uv.workspace]
members = [
  "packages/db",
  "packages/shared_utils",
  "services/backend",
  "services/crawler",
  "services/indexer",
  "services/rag",
  "services/scraper",
  "daily-health-check",
]

[tool.uv.sources]
db = { workspace = true }
shared-utils = { workspace = true }
uv-bump = { git = "https://github.com/Goldziher/uv-bump" }
