[project]
name = "grantflow"
version = "0.1.0"
description = "GrantFlow Monorepo"
readme = "README.md"
license = { text = "UNLICENSED" }

requires-python = "==3.13.*"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
]
dependencies = [  ]

[dependency-groups]
dev = [
  "asyncpg>=0.30.0",
  "codespell>=2.4.0",
  "covdefaults>=2.3.0",
  "faker>=37.0.1",
  "firebase-admin>=7.0.0",
  "google-cloud-pubsub>=2.31.0",
  "lefthook>=1.11.14",
  "litestar>=2.16.0",
  "mypy>=1.15.0",
  "opentelemetry-api>=1.35.0",
  "opentelemetry-exporter-gcp-trace>=1.9.0",
  "opentelemetry-instrumentation>=0.56b0",
  "opentelemetry-instrumentation-httpx>=0.56b0",
  "opentelemetry-instrumentation-sqlalchemy>=0.56b0",
  "opentelemetry-sdk>=1.35.0",
  "pgvector>=0.4.1",
  "polyfactory>=2.19.0",
  "pyproject-fmt>=2.6.0",
  "pytest>=8.3.5",
  "pytest-asyncio>=0.25.3",
  "pytest-cov>=6.0.0",
  "pytest-mock>=3.14.0",
  "pytest-timeout>=2.3.1",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.2",
  "ruff>=0.11.1",
  "sqlalchemy>=2.0.41",
  "structlog>=25.4.0",
  "uncomment>=2.2.3",
  "uv-bump",
]

[tool.ruff]
target-version = "py313"
line-length = 120
src = [
  "packages/**/src",
  "packages/**/tests",
  "services/**/src",
  "services/**/tests",
]

format.docstring-code-line-length = 120
format.docstring-code-format = true
lint.select = [ "ALL" ]
lint.ignore = [
  "ANN401",   # Dynamically typed ANY
  "ASYNC109", # Async function definition with a timeout parameter
  "ASYNC110", # Use Event instead of sleep in async loop
  "BLE001",   # Do not catch blind exception - we allow this pattern
  "COM812",   # Conflicts with formatter
  "D",        # Doc strings
  "E501",     # Line too long, handled by ruff format
  "EM",       # Exception messages,
  "FBT",      # Boolean-typed positional argument in function definition
  "FIX",      # We allow todo and fixme comments
  "ISC001",   # Conflicts with formatter
  "PD011",    # Creates false positives
  "PGH003",   # Required specific mypy ignores
  "PLR2004",  # Magic variables, we allow them
  "S104",     # Disallows using '0.0.0.0' as a host
  "TD",       # We allow todo and fixme comments
  "TRY",      # Try except block, rules are too strict
]
lint.per-file-ignores."**/tests/**/*.*" = [
  "ARG",
  "D",
  "N815",
  "PLC0415",
  "PT006",
  "PT007",
  "PT012",
  "PT013",
  "RUF012",
  "S",
  "SLF001",  # Allow accessing private members in tests
]
lint.per-file-ignores."e2e/**/*.*" = [
  "ARG001",
  "D",
  "EXE002",
  "N815",
  "PT006",
  "PT007",
  "PT012",
  "PT013",
  "RUF012",
  "S",
]
lint.per-file-ignores."packages/db/alembic/**/*.*" = [ "INP001" ]
lint.per-file-ignores."scripts/**/*.*" = [
  "ARG001",
  "BLE001",
  "D",
  "DTZ003",
  "G004",
  "N999",
  "S",
]
lint.per-file-ignores."services/rag/src/autofill/base_handler.py" = [
  "B027",
] # Allow empty method in base class
lint.per-file-ignores."testing/**/*.*" = [
  "ARG001",
  "D",
  "N815",
  "PT006",
  "PT007",
  "PT012",
  "PT013",
  "RUF012",
  "S",
]
lint.isort.known-first-party = [ "src", "tests" ]
lint.mccabe.max-complexity = 25
lint.pydocstyle.convention = "google"
lint.pylint.max-args = 15
lint.pylint.max-branches = 25
lint.pylint.max-returns = 10
lint.pylint.max-statements = 120

[tool.codespell]
ignore-words-list = "Bu,COo,bu,TAHt,UE,Mater,CROs,devlop,vEw,afterAll,beforeAll,TE,wasn,mor,couldn"
skip = "*/e2e/*,**/e2e/**,pnpm-lock.yaml,*.spec.ts,*.spec.tsx,*_test.py,*/tests/*,**/tests/**,*/coverage/*,**/coverage/**,**/functions/**,*/dist/*,**/dist/**"

[tool.pyproject-fmt]
keep_full_version = true
max_supported_python = "3.13"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
timeout = 600
markers = [
  "smoke: Quick smoke tests (< 1 min)",
  "quality_assessment: Quality assessment tests (2-5 min)",
  "e2e: End-to-end tests that make real external API calls",
  "e2e_full: Complete e2e tests (10+ min)",
  "slow: All slow tests",
  "grant_application: Grant application related tests",
  "grant_template: Grant template related tests",
  "retrieval: Document retrieval and search tests",
  "nlp_categorization: NLP text categorization tests",
  "indexer: Document indexing service tests",
  "crawler: Web crawling service tests",
  "scraper: Web scraping service tests",
  "optimization: Performance optimization tests",
  "semantic_evaluation: Semantic similarity evaluation tests",
  "ai_eval: AI-powered evaluation tests",
  "vector_benchmark: Vector database performance benchmarks",
  "benchmark: All benchmark tests",
  "benchmark_vector: Vector-specific benchmarks",
  "benchmark_database: Database performance benchmarks",
  "benchmark_api: API performance benchmarks",
]
filterwarnings = [
  "ignore::DeprecationWarning:pkg_resources.*",
  "ignore::DeprecationWarning:google.*",
  "ignore::DeprecationWarning:websockets.*",
  "ignore::DeprecationWarning:fake_http_header.*",
  "ignore::DeprecationWarning:importlib.resources.*",
  "ignore::DeprecationWarning:tracerite.*",
  "ignore::DeprecationWarning:spacy.*",
  "ignore::DeprecationWarning:weasel.*",
  "ignore:pkg_resources is deprecated:UserWarning:google.*",
  "ignore:Use of deprecated default '__check_model__':DeprecationWarning:polyfactory.*",
]
# Run tests serially without retries for stability
addopts = [
  "--strict-markers", # Ensure all markers are registered
  "--tb=short",       # Shorter traceback format for better readability in CI
]
testpaths = [ "packages/*/tests", "services/*/tests" ]

[tool.coverage.run]
plugins = [ "covdefaults" ]
omit = [ "services/**/tests/*", "packages/**/tests/*" ]
source = [ "services/**/src", "packages/**/src" ]

[tool.coverage.report]
exclude_lines = [ 'if TYPE_CHECKING:' ]

[tool.mypy]
python_version = "3.13"
disable_error_code = 'import-untyped'
implicit_reexport = false
show_error_codes = true
strict = true
namespace_packages = true
explicit_package_bases = true
mypy_path = [ "." ]
exclude = [ "^functions/.*", "^terraform/.*" ]

[[tool.mypy.overrides]]
module = [
  "google.cloud.*",
  "google.cloud.firestore",
  "google.cloud.firestore_v1",
  "google.cloud.pubsub_v1",
  "firebase_admin.*",
  "firebase_functions.*",
]
ignore_missing_imports = true
follow_imports = "skip"
no_implicit_reexport = false

[tool.uv.workspace]
members = [
  "packages/db",
  "packages/shared_utils",
  "services/backend",
  "services/crawler",
  "services/indexer",
  "services/rag",
  "services/scraper",
  "functions",
]

[tool.uv.sources]
db = { workspace = true }
shared-utils = { workspace = true }
uv-bump = { git = "https://github.com/Goldziher/uv-bump" }
