[project]
name = "grantflow-backend"
version = "0.1.0"
description = "GrantFlow Backend"
readme = "README.md"
license = { text = "UNLICENSED" }
authors = [ { name = "Na'aman Hirschfeld", email = "admin@grantflow.ai" } ]
requires-python = "==3.12.*"
classifiers = [ "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.12" ]

dependencies = [
  "aiohttp>=3.11.14",
  "anthropic>=0.49.0",
  "anyio>=4.9.0",
  "asyncpg>=0.30.0",
  "azure-ai-documentintelligence>=1.0.1",
  "crawl4ai>=0.5.0.post4",
  "en-core-web-sm",
  "firebase-admin>=6.7.0",
  "google-cloud-aiplatform>=1.85.0",
  "greenlet>=3.1.1",
  "kreuzberg>=2.1.2",
  "litestar[valkey]>=2.15.1",
  "litestar-granian>=0.12.2",
  "msgspec>=0.19.0",
  "pathvalidate>=3.2.3",
  "pgvector>=0.4.0",
  "prompt-template>=1.2.0",
  "pyjwt>=2.10.1",
  "rank-bm25>=0.2.2",
  "semantic-text-splitter>=0.24.2",
  "sentence-transformers[onnx]>=3.4.1",
  "spacy>=3.8.4",
  "sqlalchemy>=2.0.39",
  "structlog>=25.2.0",
  "tenacity>=9.0.0",
  "torch>=2.2.2",
  "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "covdefaults>=2.3.0",
    "faker>=37.0.1",
    "polyfactory>=2.19.0",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-timeout>=2.3.1",
    "pytest>=8.3.5",
    "python-dotenv>=1.0.1",
    "alembic>=1.15.1",
    "psycopg[binary]>=3.2.6", # required for alembic
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
