[project]
name = "grantflow-cloud-functions"
version = "0.1.0"
description = "Cloud functions for GrantFlow.AI"
authors = [
  { name = "GrantFlow.AI Team", email = "team@grantflow.ai" },
]
requires-python = ">=3.13"
classifiers = [ "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.13" ]
dependencies = [
  "asyncpg>=0.29",
  "cloudevents>=1.10",
  "firebase-admin>=6.5",
  "functions-framework>=3.5",
  "httpx>=0.27",
  "sqlalchemy>=2",
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "pytest-mock>=3.12.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
  "ruff>=0.8.7",
  "mypy>=1.14.1",
  "types-requests>=2.32.0",
]
