[project]
name = "grantflow-cloud-functions"
version = "0.1.0"
description = "Cloud functions for GrantFlow.AI"
authors = [
  { name = "GrantFlow.AI Team", email = "team@grantflow.ai" },
]
requires-python = ">=3.13"
classifiers = [ "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.13" ]
dependencies = [
  "firebase-admin>=6.5",
  "firebase-functions>=0.4.3",
]

[tool.mypy]
python_version = "3.13"
strict = true
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
  "firebase_admin.*",
  "firebase_functions.*",
]
ignore_missing_imports = true
follow_imports = "skip"
no_implicit_reexport = false

[tool.uv]
dev-dependencies = [
  "types-requests>=2.32.0", # Specific to functions, not in root
]
