[project]
name = "gcs-file-notifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
classifiers = [ "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.12" ]
dependencies = [
  "functions-framework>=3.8.2",
  "httpx>=0.28.1",
]
