[project]
name = "backend"
version = "0.1.0"
description = "GrantFlow Backend"
readme = "README.md"
license = { text = "UNLICENSED" }
authors = [ { name = "Na'aman Hirschfeld", email = "admin@grantflow.ai" } ]
requires-python = "==3.13.*"
classifiers = [ "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.13" ]

dependencies = [
  "db",
  "firebase-admin>=6.7",
  "pyjwt>=2.10.1",
  "shared-utils[server,gcs,pubsub]",
]

[dependency-groups]
dev = [
  "shared-utils[server,gcs,pubsub,ai,embeddings,extraction]",
]
