[project]
name = "backend"
version = "0.1.0"
description = "GrantFlow Backend"
readme = "README.md"
license = { text = "UNLICENSED" }
authors = [ { name = "Na'aman Hirschfeld", email = "admin@grantflow.ai" } ]
requires-python = "==3.13.*"
classifiers = [ "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.13" ]

dependencies = [
  "beautifulsoup4>=4.13",
  "db",
  "firebase-admin>=6.7",
  "httpx>=0.27",
  "jinja2>=3.1",
  "markdown>=3.5",
  "pyjwt>=2.10.1",
  "python-docx>=1.1",
  "shared-utils[server,gcs,pubsub]",
  "weasyprint>=66",
]

[dependency-groups]
dev = [
  "shared-utils[server,gcs,pubsub,ai,embeddings,extraction]",
]
