[project]
name = "backend"
version = "0.1.0"
description = "GrantFlow Backend"
readme = "README.md"
license = { text = "UNLICENSED" }
authors = [ { name = "Na'aman Hirschfeld", email = "admin@grantflow.ai" } ]
requires-python = "==3.13.*"
classifiers = [ "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.13" ]

dependencies = [
  "db",
  "firebase-admin>=6.7",
  "google-auth>=2.40.3",
  "html-to-markdown>=2.1",
  "httpx>=0.27",
  "jinja2>=3.1",
  "markdown>=3.5",
  "playwright>=1.49.1",
  "pyjwt>=2.10.1",
  "python-docx>=1.1",
  "shared-utils[gcs,pubsub,server]",
]

[dependency-groups]
dev = [
  "shared-utils[ai,embeddings,extraction,gcs,pubsub,server]",
]
