[project]
name = "crawler"
version = "0.1.0"
description = "Grantflow Crawler"
readme = "README.md"
license = { text = "UNLICENSED" }
authors = [ { name = "Na'aman Hirschfeld", email = "admin@grantflow.ai" } ]
requires-python = "==3.12.*"

classifiers = [ "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.12" ]
dependencies = [
  "beautifulsoup4>=4.13.4",
  "db",
  "html-to-markdown>=1.3.2",
  "httpx>=0.28.1",
  "shared-utils[chunking,embeddings,gcs,pubsub]",
  "trafilatura>=2",
  "uvicorn[standard]>=0.34",
]
