[project]
name = "crawler"
version = "0.1.0"
description = "Grantflow Crawler"
readme = "README.md"
license = { text = "UNLICENSED" }
authors = [ { name = "Na'aman Hirschfeld", email = "admin@grantflow.ai" } ]
requires-python = "==3.13.*"

classifiers = [ "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.13" ]
dependencies = [
  "beautifulsoup4>=4.13.4",
  "db",
  "httpx>=0.28.1",
  "shared-utils[embeddings,gcs,pubsub,server]",
  "trafilatura>=2",
]

[tool.ruff]
lint.per-file-ignores = { "tests/main_test.py" = [ "PLC0415" ] }
