[project]
name = "indexer"
version = "0.1.0"
description = "Grantflow Indexer"
readme = "README.md"
license = { text = "UNLICENSED" }
authors = [ { name = "Na'aman Hirschfeld", email = "admin@grantflow.ai" } ]
requires-python = "==3.12.*"
classifiers = [ "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.12" ]

dependencies = [
  "db",
  "shared-utils[chunking,embeddings,extraction,gcs]",
  "uvicorn[standard]>=0.34",
]
