[project]
name = "indexer"
version = "0.1.0"
description = "Grantflow Indexer"
readme = "README.md"
license = { text = "UNLICENSED" }
authors = [ { name = "Na'aman Hirschfeld", email = "admin@grantflow.ai" } ]
requires-python = "==3.13.*"
classifiers = [ "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.13" ]

dependencies = [
  "db",
  "shared-utils[chunking,embeddings,extraction,gcs,pubsub]",
  "uvicorn[standard]>=0.34",
]
