[project]
name = "rag"
version = "0.1.0"
description = "Grantflow RAG"
readme = "README.md"
license = { text = "UNLICENSED" }
authors = [ { name = "Na'aman Hirschfeld", email = "admin@grantflow.ai" } ]
requires-python = "==3.13.*"

classifiers = [ "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.13" ]
dependencies = [
  "db",
  "shared-utils[server,ai,embeddings,gcs,nlp,pubsub]",
]

[dependency-groups]
dev = [
  "shared-utils[server,ai,embeddings,gcs,nlp,pubsub,extraction]",
]
